--- a/config.toml
+++ b/config.toml
@@ -21,9 +21,9 @@ highlight_code = true
 [extra]
 # Put all your custom variables here
 menu_items = [
-    {name = "about", url = "/about"},
-    {name = "projects", url = "/projects"},
-    {name = "photography", url = "/photography"},
+    {name = "about", url = "/pages/about"},
+    {name = "projects", url = "/pages/projects"},
+    {name = "photography", url = "/pages/photography"},
 ]
 
 author = "Everett Robinson"
