--- a/config.toml
+++ b/config.toml
@@ -3,10 +3,8 @@ base_url = "https://zola-folio.pages.dev"
 title = "*folio"
 description = "simple whitespace theme"
 
-# Whether to automatically compile all Sass files in the sass directory
+default_language = "en"
 compile_sass = true
-
-# Whether to build a search index to be used later on by a JavaScript library
 build_search_index = false
 
 taxonomies = [
