Add search to theme

--- a/config.toml
+++ b/config.toml
@@ -5,11 +5,18 @@ description = "simple whitespace theme"
 
 default_language = "en"
 compile_sass = true
-build_search_index = false
+build_search_index = true
 
 taxonomies = [
     {name = "tags"}
 ]
+
+[search]
+include_title = true
+include_description = true
+include_path = true
+include_content = true
+index_format = "elasticlunr_json"
 
 [markdown]
 # Whether to do syntax highlighting
