--- a/theme.toml
+++ b/theme.toml
@@ -3,9 +3,9 @@ description = "A fork of the Jekyll *folio theme to zola"
 license = "MIT"
 homepage = "https://github.com/evjrob/zola-folio"
 # The minimum version of Zola required
-min_version = "0.19.0"
+min_version = "0.19.2"
 # An optional live demo URL
-demo = ""
+demo = "https://zola-folio.pages.dev/"
 
 # Any variable there can be overridden in the end user `config.toml`
 # You don't need to prefix variables by the theme name but as this will
