--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 # The URL the site will be built for
 base_url = "https://zola-folio.pages.dev"
-title = "*folio"
-description = "simple whitespace theme"
+title = "Bilgisaray"
+description = "decentralize community"
 
 default_language = "en"
 compile_sass = true
@@ -25,15 +25,15 @@ highlight_code = true
 
 [extra]
 # Include mathjax?
-math = true
+math = false
 
 theme_color = "red"
 
 # Put all your custom variables here
 menu_items = [
     {name = "about", url = "/pages/about"},
-    {name = "projects", url = "/pages/projects"},
-    {name = "photography", url = "/pages/photography"},
+    {name = "press", url = "/pages/press"},
+    {name = "Kiezkantine", url = "/pages/kiezkantine"},
 ]
 
 author = "Everett Robinson"
